graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_type_system_definition.snap
---
created: "2019-10-30T03:14:35.132555Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "type_system_definition::<(&str,\n                          ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                                panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "SchemaDefinition",
    "kind": "SchemaDefinition",
    "loc": {
      "start": 0,
      "end": 9
    },
    "directives": null,
    "operationTypes": []
  }
]
