graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_union_definition_1.snap
---
created: "2019-10-27T17:29:39.401454Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "union_definition::<nom::error::VerboseError<&str>>(&source)(&source.body).unwrap_or_else(|_|\n                                                                                             panic!(\"Test failed\"))"
---
[
  "x",
  {
    "kind": "UnionTypeDefinition",
    "loc": {
      "start": 0,
      "end": 34
    },
    "description": null,
    "name": {
      "kind": "Name",
      "loc": {
        "start": 6,
        "end": 13
      },
      "value": "MyUnion"
    },
    "directives": null,
    "types": [
      {
        "kind": "NamedType",
        "loc": {
          "start": 16,
          "end": 23
        },
        "name": {
          "kind": "Name",
          "loc": {
            "start": 16,
            "end": 23
          },
          "value": "MemberA"
        }
      },
      {
        "kind": "NamedType",
        "loc": {
          "start": 26,
          "end": 33
        },
        "name": {
          "kind": "Name",
          "loc": {
            "start": 26,
            "end": 33
          },
          "value": "MemberB"
        }
      }
    ]
  }
]
