graphql_rs_native/src/language/snapshots/tests__object_definition_2.snap
---
source: graphql_rs_native/src/language/parser.rs
expression: "object_definition::<(&str,\n                     ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                           panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "ObjectTypeDefinition",
    "loc": {
      "start": 0,
      "end": 9
    },
    "description": null,
    "name": {
      "kind": "Name",
      "loc": {
        "start": 5,
        "end": 9
      },
      "value": "User"
    },
    "interfaces": null,
    "directives": null,
    "fields": null
  }
]
