graphql_rs_native/src/language/snapshots/tests__string_value_2.snap
---
source: graphql_rs_native/src/language/parser.rs
expression: "string_value::<(&str,\n                ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                      panic!(\"Test failed\"))"
---
[
  " ",
  {
    "kind": "StringValue",
    "loc": {
      "start": 0,
      "end": 14
    },
    "value": "My test text",
    "block": false
  }
]
