graphql_rs_native/src/language/snapshots/tests__string_value_5.snap
---
source: graphql_rs_native/src/language/parser.rs
expression: "string_value::<(&str,\n                ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                      panic!(\"Test failed\"))"
---
[
  "Hello\\\" \" ",
  {
    "kind": "StringValue",
    "loc": {
      "start": 0,
      "end": 13
    },
    "value": " He said: ",
    "block": false
  }
]
